--- a/app/views/pages/bio.html.twig
+++ b/app/views/pages/bio.html.twig
@@ -13,7 +13,8 @@
             <p> Jean Forteroche nait à Besançon le 26 février 1802. Intellectuel, écrivain, poète et dramaturge, il est
                 considéré comme le père du Romantisme français. Il est aussi une personnalité politique très engagée.
                 <br><br>
-                Jean Forteroche est le troisième fils d’un général de l’armée de Bonaparte, Joseph-Léopold Sigisbert et de
+                Jean Forteroche est le troisième fils d’un général de l’armée de Bonaparte, Joseph-Léopold Sigisbert et
+                de
                 Sophie Trébuchet. Il a une enfance et une jeunesse nomade à cause de la profession de son père. Il vit
                 en Corse, en Italie, en Espagne et à Paris. Tous ces lieux sont toujours présents dans son esprit et
                 dans ses écrits. En 1814 ses parents se séparent. Sa mère va habiter à Paris avec le jeune Victor qui
@@ -33,7 +34,8 @@
                 d’une congestion pulmonaire. La Troisième République l’honore par de grandioses funérailles nationales
                 auxquelles plus de deux millions de personnes ont assisté.
                 <br><br>
-                Jean Forteroche a joué un rôle très important à son époque, comme homme de lettres et comme homme politique.
+                Jean Forteroche a joué un rôle très important à son époque, comme homme de lettres et comme homme
+                politique.
                 Au niveau littéraire il joue un rôle central dans l’avènement du romantisme et dans la rupture avec les
                 règles du théâtre classique. Au niveau politique c’est un homme d’ouverture. Il défend des idéaux de
                 justice et de liberté. Il a lutté pour la paix, contre la peine de morte et en faveur des femmes.</p>
